--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -21,7 +21,15 @@
    <children>
     <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" spacing="10.0">
          <children>
-            <Button fx:id="createGameButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="%games.create" />
+            <SplitMenuButton fx:id="createGameButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="Create Game (Forged Alliance Forever)">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </SplitMenuButton>
             <CheckBox mnemonicParsing="false" onAction="#onShowPrivateGames" selected="true" text="%games.showPrivateGames" />
          </children>
          <padding>
@@ -30,7 +38,7 @@
     </HBox>
       <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <children>
-            <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" onMouseClicked="#onTableClicked">
+            <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
                <columns>
                   <TableColumn fx:id="mapPreviewColumn" maxWidth="42.0" minWidth="42.0" prefWidth="42.0" resizable="false" text="%game.map" />
                   <TableColumn fx:id="gameTitleColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="250.0" text="%game.title" />
@@ -44,33 +52,27 @@
             </TableView>
             <VBox maxHeight="1.7976931348623157E308" minWidth="256.0" HBox.hgrow="NEVER">
                <children>
-                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308">
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" VBox.vgrow="NEVER">
                      <children>
-                        <ImageView fx:id="mapImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="mapImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                            <HBox.margin>
                               <Insets bottom="10.0" />
                            </HBox.margin>
                         </ImageView>
                      </children>
                   </HBox>
-                  <Label fx:id="gameTitleLabel" styleClass="game-detail-title" text="Game title" />
-                  <Label fx:id="numberOfPlayersLabel" text="Number of players" />
-                  <Label fx:id="hosterLabel" text="Hoster">
+                  <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="Game title" />
+                  <Label fx:id="numberOfPlayersLabel" maxHeight="1.7976931348623157E308" text="Number of players" />
+                  <Label fx:id="hosterLabel" maxHeight="1.7976931348623157E308" text="Hoster">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="gameModeLabel" text="Game mode">
+                  <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="Game mode">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Button fx:id="joinGameButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onJoinGameButtonClicked" text="%game.join">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" VBox.vgrow="ALWAYS" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
