--- a/src/main/resources/themes/default/ladder.fxml
+++ b/src/main/resources/themes/default/ladder.fxml
@@ -6,25 +6,28 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<TabPane fx:id="ladderRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.leaderboard.LadderController">
+<TabPane fx:id="ladderRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.leaderboard.LadderController">
   <tabs>
     <Tab fx:id="ladderByRatingTab" text="By Ladder Rating">
       <content>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                  <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="transparent-background-table" VBox.vgrow="ALWAYS">
                      <columns>
-                        <TableColumn fx:id="rankColumn" prefWidth="75.0" text="Rank" />
-                        <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-                        <TableColumn fx:id="winLossColumn" prefWidth="75.0" text="Win/Loss Ratio" />
-                        <TableColumn fx:id="gamesPlayedColumn" prefWidth="75.0" text="Games Played" />
-                        <TableColumn fx:id="ratingColumn" prefWidth="75.0" text="Rating" />
+                        <TableColumn fx:id="rankColumn" maxWidth="-1.0" minWidth="39.0" prefWidth="-1.0" resizable="false" sortable="false" text="Rank" />
+                        <TableColumn fx:id="nameColumn" maxWidth="1.7976931348623157E308" minWidth="50.0" prefWidth="100.0" sortable="false" text="Name" />
+                        <TableColumn fx:id="winLossColumn" maxWidth="-1.0" minWidth="108.0" prefWidth="-1.0" sortable="false" text="Win/Loss Ratio" />
+                        <TableColumn fx:id="gamesPlayedColumn" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" sortable="false" text="Games Played" />
+                        <TableColumn fx:id="ratingColumn" maxWidth="-1.0" minWidth="50.0" prefWidth="-1.0" sortable="false" text="Rating" />
                      </columns>
                      <VBox.margin>
                         <Insets left="8.0" right="14.0" />
                      </VBox.margin>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
-                  <Slider fx:id="ratingSlider" blockIncrement="1000.0" majorTickUnit="1000.0" max="10000.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" VBox.vgrow="NEVER">
+                  <Slider fx:id="ratingSlider" blockIncrement="1000.0" majorTickUnit="1000.0" max="10000.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="1.0" VBox.vgrow="NEVER">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin>
@@ -37,7 +40,7 @@
     </Tab>
     <Tab fx:id="ladderByMapTab" text="By Map">
       <content>
-            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <HBox />
       </content>
     </Tab>
       <Tab fx:id="ladderByRankTab" text="By Rank">
