--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -33,7 +33,7 @@
             <ToggleButton fx:id="chatButton" focusTraversable="false" mnemonicParsing="false" onAction="#onNavigationButton" text="%main.chat" toggleGroup="$mainNavigationToggleGroup" />
             <ToggleButton fx:id="gamesButton" focusTraversable="false" mnemonicParsing="false" onAction="#onNavigationButton" text="%main.games" toggleGroup="$mainNavigationToggleGroup" />
             <ToggleButton fx:id="vaultButton" focusTraversable="false" mnemonicParsing="false" onAction="#onNavigationButton" text="%main.vault" toggleGroup="$mainNavigationToggleGroup" />
-            <ToggleButton fx:id="leaderboardButton" focusTraversable="false" mnemonicParsing="false" onAction="#onNavigationButton" text="%main.leaderboard" toggleGroup="$mainNavigationToggleGroup" />
+            <ToggleButton fx:id="ladderButton" focusTraversable="false" mnemonicParsing="false" onAction="#onNavigationButton" text="%main.ladder" toggleGroup="$mainNavigationToggleGroup" />
             <Pane HBox.hgrow="ALWAYS" />
             <MenuButton fx:id="usernameButton" focusTraversable="false" mnemonicParsing="false" styleClass="username-button" text="Username">
               <items>
