Changes to the FxControls version, GamesController and CreateGameDialogControler now merged as well as Game.fxml and CreateGameDiaglog.fxml

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -395,6 +395,13 @@
   -fx-background-color: transparent;
 }
 
+/***************** Range Slider Fixes *****************/
+
+.slider > .axis:bottom {
+  -fx-padding : 50, 50, 50, 50;
+  -fx-margin : 50, 50, 50, 50;
+}
+
 /***************** Window decoration *****************/
 
 .window-button {
