--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import org.controlsfx.control.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -21,7 +22,7 @@
    <children>
     <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" spacing="10.0">
          <children>
-            <SplitMenuButton fx:id="createGameButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="Create Game (Forged Alliance Forever)">
+            <SplitMenuButton fx:id="showCreateGamePanelButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="Create Game (Forged Alliance Forever)">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -38,84 +39,8 @@
     </HBox>
       <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <children>
-            <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
-               <columns>
-                  <TableColumn fx:id="mapPreviewColumn" maxWidth="42.0" minWidth="42.0" prefWidth="42.0" resizable="false" text="%game.map" />
-                  <TableColumn fx:id="gameTitleColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="250.0" text="%game.title" />
-                  <TableColumn fx:id="playersColumn" minWidth="38.0" resizable="false" text="%game.players" />
-                  <TableColumn fx:id="rankingColumn" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="250.0" text="%game.ranking" />
-                  <TableColumn fx:id="modsColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="250.0" text="%game.mods" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <VBox maxHeight="1.7976931348623157E308" minWidth="256.0" HBox.hgrow="NEVER">
+            <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308" minWidth="256.0" prefWidth="256.0">
                <children>
-                  <Label text="Create Game" />
-                  <Separator maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="6.0" top="6.0" />
-                     </padding>
-                  </Separator>
-                  <TextField text="Title">
-                     <VBox.margin>
-                        <Insets bottom="6.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <TextField text="Password" />
-                  <Separator maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="6.0" top="6.0" />
-                     </padding>
-                  </Separator>
-                  <Label text="Ranking" />
-                  <HBox maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0">
-                     <children>
-                        <TextField prefWidth="55.0" text="800" />
-                        <Slider blockIncrement="1.0" majorTickUnit="800.0" max="2600.0" maxWidth="1.7976931348623157E308" minorTickCount="0" showTickLabels="true" value="800.0" />
-                        <TextField prefWidth="55.0" text="1300" />
-                     </children>
-                  </HBox>
-                  <Separator maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="6.0" top="6.0" />
-                     </padding>
-                  </Separator>
-                  <Label text="Map (can be changed later)" />
-                  <ChoiceBox maxWidth="1.7976931348623157E308" />
-                  <Separator maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="6.0" top="6.0" />
-                     </padding>
-                  </Separator>
-                  <Label text="Mods" />
-                  <ChoiceBox maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets bottom="6.0" />
-                     </VBox.margin>
-                  </ChoiceBox>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Create Game" />
-                  <Separator maxWidth="1.7976931348623157E308">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="6.0" top="6.0" />
-                     </padding>
-                  </Separator>
                   <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" VBox.vgrow="NEVER">
                      <children>
                         <ImageView fx:id="mapImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
@@ -142,6 +67,99 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
+            <VBox fx:id="createGamePanel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" visible="false">
+               <children>
+                  <Label text="%games.create" />
+                  <Separator maxWidth="1.7976931348623157E308">
+                     <padding>
+                        <Insets bottom="6.0" top="6.0" />
+                     </padding>
+                  </Separator>
+                  <TextField fx:id="titleTextField" promptText="%game.title" />
+                  <TextField fx:id="passwordTextField" promptText="%game.passwordHint">
+                     <VBox.margin>
+                        <Insets top="8.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Separator maxWidth="1.7976931348623157E308">
+                     <padding>
+                        <Insets bottom="6.0" top="6.0" />
+                     </padding>
+                  </Separator>
+                  <Label text="%game.ranking" />
+                  <HBox maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0">
+                     <children>
+                        <TextField fx:id="minRankingTextField" prefWidth="55.0">
+                           <HBox.margin>
+                              <Insets top="3.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <RangeSlider fx:id="rankingSlider" blockIncrement="100.0" majorTickUnit="500.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="maxRankingTextField" minWidth="-Infinity" prefWidth="55.0">
+                           <HBox.margin>
+                              <Insets left="6.0" top="3.0" />
+                           </HBox.margin>
+                        </TextField>
+                     </children>
+                  </HBox>
+                  <Separator maxWidth="1.7976931348623157E308">
+                     <padding>
+                        <Insets bottom="6.0" top="6.0" />
+                     </padding>
+                  </Separator>
+                  <Label text="%game.create.map" />
+                  <ComboBox fx:id="mapComboBox" maxWidth="1.7976931348623157E308">
+                     <VBox.margin>
+                        <Insets top="3.0" />
+                     </VBox.margin>
+                  </ComboBox>
+                  <Separator maxWidth="1.7976931348623157E308">
+                     <padding>
+                        <Insets bottom="6.0" top="6.0" />
+                     </padding>
+                  </Separator>
+                  <Label text="%game.mods" />
+                  <CheckComboBox fx:id="additionalModsCheckComboBox" maxWidth="1.7976931348623157E308">
+                     <VBox.margin>
+                        <Insets top="3.0" />
+                     </VBox.margin>
+                  </CheckComboBox>
+                  <HBox>
+                     <VBox.margin>
+                        <Insets top="8.0" />
+                     </VBox.margin>
+                     <children>
+                        <Button fx:id="createGameButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%games.create" HBox.hgrow="ALWAYS">
+                           <HBox.margin>
+                              <Insets top="3.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%games.cancel" HBox.hgrow="ALWAYS">
+                           <HBox.margin>
+                              <Insets left="10.0" top="3.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <Separator maxWidth="1.7976931348623157E308">
+                     <padding>
+                        <Insets bottom="6.0" top="6.0" />
+                     </padding>
+                  </Separator>
+               </children>
+            </VBox>
+            <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
+               <columns>
+                  <TableColumn fx:id="mapPreviewColumn" maxWidth="42.0" minWidth="42.0" prefWidth="42.0" resizable="false" text="%game.map" />
+                  <TableColumn fx:id="gameTitleColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="250.0" text="%game.title" />
+                  <TableColumn fx:id="playersColumn" minWidth="38.0" resizable="false" text="%game.players" />
+                  <TableColumn fx:id="rankingColumn" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="250.0" text="%game.ranking" />
+                  <TableColumn fx:id="modsColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="250.0" text="%game.mods" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
          </children>
       </HBox>
    </children>
